--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>onsprk network</title>
+		<title>onsprk ~ network</title>
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,9 +12,9 @@
 
 		<!-- CSS -->
 		<style>
-            * {
-                box-sizing: border-box;
-            }
+			* {
+				box-sizing: border-box;
+			}
 			html {
 				height: 100%;
 				margin: 0;
@@ -40,10 +40,10 @@
 				border-top: 1px solid #ccc;
 				border-bottom: 1px solid #ccc;
 
-                margin-left: 1rem;
-                margin-right: 1rem;
+				margin-left: 1rem;
+				margin-right: 1rem;
 
-                box-sizing: content-box;
+				box-sizing: content-box;
 			}
 			h1 {
 				font-size: 2rem;
@@ -55,41 +55,41 @@
 			}
 			p {
 				font-size: 1.5rem;
-                margin: 12px 0;
+				margin: 12px 0;
 			}
 			a {
 				color: #333;
 				text-decoration: underline;
 
-                transition: all 0.2s ease-in-out;
+				transition: all 0.2s ease-in-out;
 			}
 			a:hover {
 				background-color: #333;
-                color: #f0f0f0;
+				color: #f0f0f0;
 			}
 
-            a.button {
-                display: inline-block;
-                padding: 0.5rem 1rem;
-                border: 1px solid #333;
-                border-radius: 0.25rem;
-                text-decoration: none;
-                color: #333;
-                font-size: 1.25rem;
-                font-weight: 600;
-            }
+			a.button {
+				display: inline-block;
+				padding: 0.5rem 1rem;
+				border: 1px solid #333;
+				border-radius: 0.25rem;
+				text-decoration: none;
+				color: #333;
+				font-size: 1.25rem;
+				font-weight: 600;
+			}
 
-            a.button:hover {
-                background-color: #333;
-                color: #f0f0f0;
-            }
+			a.button:hover {
+				background-color: #333;
+				color: #f0f0f0;
+			}
 		</style>
 	</head>
 	<body>
 		<main>
 			<h1>onsprk<span class="less"> ~ network</span></h1>
 			<p>onsprk.net.eu.org is the network domain of <a href="https://onespark.dev">OneSpark LLC</a> and is used for hosting many of our backend services.</p>
-            <a class="button" href="https://onespark.dev">Learn More</a>
+			<a class="button" href="https://onespark.dev">Learn More</a>
 		</main>
 	</body>
 </html>
