--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				display: inline-block;
 				padding: 0.5rem 1rem;
 				border: 1px solid #333;
-				border-radius: 0.25rem;
+				border-radius: 0;
 				text-decoration: none;
 				color: #333;
 				font-size: 1.25rem;
