--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <main>
     <div id="title">
       <h1>onsprk<span class="less"> ~ network</span></h1>
+      <a class="button" id="homeButton" href="/">
+        <i class="fa-solid fa-home"></i>
+      </a>
       <a class="button" id="themeButton" onclick="themeToggle();">
         <i class="fa-solid fa-moon"></i>
       </a>
