--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <a href="https://onespark.dev">OneSpark LLC</a> and is used for hosting
       many of our backend services.
     </p>
-    <a class="button" href="/quotes">"Quotes" from our founder <i class="fa-solid fa-arrow-right"></i></a>
+    <a class="button" href="/quotes">Quotes from our Spokesperson <i class="fa-solid fa-arrow-right"></i></a>
   </main>
 </body>
 <script src="/js/index.js"></script>
