add favicon, meta tags

--- a/index.html
+++ b/index.html
@@ -1,42 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>onsprk ~ network</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>onsprk ~ network</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet" />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
-    rel="stylesheet" />
+		<script src="https://kit.fontawesome.com/9cb2f2488a.js" crossorigin="anonymous"></script>
 
-  <script src="https://kit.fontawesome.com/9cb2f2488a.js" crossorigin="anonymous"></script>
+		<!-- Favicon -->
+		<link rel="apple-touch-icon" sizes="180x180" href="/meta/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/meta/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/meta/favicon-16x16.png" />
+		<link rel="manifest" href="/meta/site.webmanifest" />
+		<link rel="mask-icon" href="/meta/safari-pinned-tab.svg" color="#333333" />
+		<link rel="shortcut icon" href="/meta/favicon.ico" />
+		<meta name="msapplication-TileColor" content="#ffffff" />
+		<meta name="msapplication-config" content="/meta/browserconfig.xml" />
+		<meta name="theme-color" content="#ffffff" />
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="/css/style.css" />
-</head>
+		<!-- SEO -->
+		<!-- Primary Meta Tags -->
+		<title>onsprk ~ network</title>
+		<meta name="title" content="onsprk ~ network" />
+		<meta name="description" content="onsprk.net.eu.org is the network domain of OneSpark LLC and is used for hosting many of our backend services. " />
 
-<body>
-  <main>
-    <div id="title">
-      <h1>onsprk<span class="less"> ~ network</span></h1>
-      <a class="button" id="homeButton" href="/">
-        <i class="fa-solid fa-home"></i>
-      </a>
-      <a class="button" id="themeButton" onclick="themeToggle();">
-        <i class="fa-solid fa-moon"></i>
-      </a>
-    </div>
-    <p>
-      onsprk.net.eu.org is the network domain of
-      <a href="https://onespark.dev">OneSpark LLC</a> and is used for hosting
-      many of our backend services.
-    </p>
-    <a class="button" href="/quotes">Quotes from our Spokesperson <i class="fa-solid fa-arrow-right"></i></a>
-  </main>
-</body>
-<script src="/js/index.js"></script>
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://onsprk.net.eu.org/" />
+		<meta property="og:title" content="onsprk ~ network" />
+		<meta property="og:description" content="onsprk.net.eu.org is the network domain of OneSpark LLC and is used for hosting many of our backend services. " />
+		<meta property="og:image" content="/meta/Banner.png" />
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://onsprk.net.eu.org/" />
+		<meta property="twitter:title" content="onsprk ~ network" />
+		<meta property="twitter:description" content="onsprk.net.eu.org is the network domain of OneSpark LLC and is used for hosting many of our backend services. " />
+		<meta property="twitter:image" content="/meta/Banner.png" />
+
+		<!-- CSS -->
+		<link rel="stylesheet" href="/css/style.css" />
+	</head>
+
+	<body>
+		<main>
+			<div id="title">
+				<h1>onsprk<span class="less"> ~ network</span></h1>
+				<a class="button" id="homeButton" href="/">
+					<i class="fa-solid fa-home"></i>
+				</a>
+				<a class="button" id="themeButton" onclick="themeToggle();">
+					<i class="fa-solid fa-moon"></i>
+				</a>
+			</div>
+			<p>
+				onsprk.net.eu.org is the network domain of
+				<a href="https://onespark.dev">OneSpark LLC</a> and is used for hosting many of our backend services.
+			</p>
+			<a class="button" href="/quotes">Quotes from our Spokesperson <i class="fa-solid fa-arrow-right"></i></a>
+		</main>
+	</body>
+	<script src="/js/index.js"></script>
 </html>
