--- a/quotes.html
+++ b/quotes.html
@@ -51,10 +51,10 @@
 		<main>
 			<div id="title">
 				<h1>onsprk<span class="less"> ~ quotes</span></h1>
-				<a class="button" id="homeButton" href="/">
+				<a class="button prevent-select" id="homeButton" href="/">
 					<i class="fa-solid fa-home"></i>
 				</a>
-				<a class="button" id="themeButton" onclick="themeToggle();">
+				<a class="button prevent-select" id="themeButton" onclick="themeToggle();">
 					<i class="fa-solid fa-moon"></i>
 				</a>
 			</div>
