--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 		<main>
 			<div id="title">
 				<h1>onsprk<span class="less"> ~ network</span></h1>
-				<a class="button" id="homeButton" href="/">
+				<a class="button prevent-select" id="homeButton" href="/">
 					<i class="fa-solid fa-home"></i>
 				</a>
-				<a class="button" id="themeButton" onclick="themeToggle();">
+				<a class="button prevent-select" id="themeButton" onclick="themeToggle();">
 					<i class="fa-solid fa-moon"></i>
 				</a>
 			</div>
@@ -62,7 +62,7 @@
 				onsprk.net.eu.org is the network domain of
 				<a href="https://onespark.dev">OneSpark LLC</a> and is used for hosting many of our backend services.
 			</p>
-			<a class="button" href="/quotes">Quotes from our Spokesperson <i class="fa-solid fa-arrow-right"></i></a>
+			<a class="button prevent-select" href="/quotes">Quotes from our Spokesperson <i class="fa-solid fa-arrow-right"></i></a>
 		</main>
 	</body>
 	<script src="/js/index.js"></script>
