--- a/quotes.html
+++ b/quotes.html
@@ -64,4 +64,5 @@
 	</body>
 	<script src="/js/index.js"></script>
 	<script src="/js/quote.js"></script>
+	<script defer src="https://takeback-1-d8615038.deta.app/api/kit/ZENYZQ88CSLHD1OM69RENE"></script>
 </html>
