--- a/index.html
+++ b/index.html
@@ -66,4 +66,5 @@
 		</main>
 	</body>
 	<script src="/js/index.js"></script>
+	<script defer src="https://takeback-1-d8615038.deta.app/api/kit/ZENYZQ88CSLHD1OM69RENE"></script>
 </html>
