--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 
 		<!-- CSS -->
 		<link rel="stylesheet" href="/css/style.css" />
+
+		<!-- Tracking -->
+		<script src="https://takeback-1-d8615038.deta.app/api/kit/ZENYZQ88CSLHD1OM69RENE"></script>
 	</head>
 
 	<body>
@@ -66,5 +69,4 @@
 		</main>
 	</body>
 	<script src="/js/index.js"></script>
-	<script defer src="https://takeback-1-d8615038.deta.app/api/kit/ZENYZQ88CSLHD1OM69RENE"></script>
 </html>
