--- a/quotes.html
+++ b/quotes.html
@@ -45,6 +45,9 @@
 
 		<!-- CSS -->
 		<link rel="stylesheet" href="/css/style.css" />
+
+		<!-- Tracking -->
+		<script src="https://takeback-1-d8615038.deta.app/api/kit/ZENYZQ88CSLHD1OM69RENE"></script>
 	</head>
 
 	<body>
@@ -64,5 +67,4 @@
 	</body>
 	<script src="/js/index.js"></script>
 	<script src="/js/quote.js"></script>
-	<script defer src="https://takeback-1-d8615038.deta.app/api/kit/ZENYZQ88CSLHD1OM69RENE"></script>
 </html>
