--- a/quotes.html
+++ b/quotes.html
@@ -47,7 +47,7 @@
 		<link rel="stylesheet" href="/css/style.css" />
 
 		<!-- Tracking -->
-		<script src="https://takeback-1-d8615038.deta.app/api/kit/ZENYZQ88CSLHD1OM69RENE"></script>
+		<script defer src="https://takeback-1-d8615038.deta.app/api/kit/ZENYZQ88CSLHD1OM69RENE"></script>
 	</head>
 
 	<body>
